updated_openapi.yaml_and_app.js
