# online-pharmacy/docs/openapi.yaml
@@ -14,6 +14,26 @@ servers:
     description: Default server for local development
     name: Local Development Server
 
+components:
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      name: Authorization
+      in: header
+      description: JWT token obtained after successful login. Format: Bearer <token>
+
+security:
+  - JWTAuth: []
+
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+security:
+  - bearerAuth: []
+
 paths:
   /api/products:
     get:
@@ -78,6 +98,8 @@ paths:
 
     post:
       summary: Creates a new product.
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -419,6 +441,8 @@ paths:
   /api/users:
     get:
       summary: Get all users
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: A list of users
@@ -442,9 +466,12 @@ paths:
                       type: string
                       format: date-time
                       description: The date and time when the user was created
-
+  
+  /api/users/register:
     post:
       summary: Create a new user
+      security:
+        - JWTAuth: []
       requestBody:
         required: true
         content:
@@ -482,3 +509,40 @@ paths:
                     type: string
                     format: date-time
                     description: The date and time when the user was created
+        
+        '200':
+          description: User registered successfully
+
+  /api/users/login:
+    post:
+      summary: Log in a user
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: test@example.com
+                password:
+                  type: string
+                  example: yourpassword
+      responses:
+        '200':
+          description: User logged in successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: your_jwt_token
+        '400':
+          description: Invalid credentials
+        '500':
+          description: Server error
